--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1>Colgate Code Clubs (CCC)</h1>
+									<h1>CS Clubs @ Colgate</h1>
 									<p>Homepage of major Colgate Coding Club events</p>
 								</div>
 
