--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 								<div class="item intro span-2">
 									<h1>CS Clubs @ Colgate</h1>
-									<p>Homepage of major Colgate Coding Club events</p>
+									<p>Homepage of major Colgate CS Clubs' events</p>
 								</div>
 
 								<article class="item thumb span-1">
