--- a/index.html
+++ b/index.html
@@ -24,51 +24,22 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1>CS Clubs @ Colgate</h1>
-									<p>Homepage of major Colgate CS Clubs' events</p>
+									<h1>Colgate Technology Immersion Week</h1>
+									<p>March 28th - April 7th 2022</p>
 								</div>
 
 								<article class="item thumb span-1">
-									<h2>March 28th</h2>
-									<ul>
-										<p>6:00 - Web Development Fundamentals.</p>
-										<p>7:00 - Intro to IDEs</p>
-									</ul>
+									<h2>RSVP</h2>
 									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>March 29th</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-1">
-									<h2>March 30th</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-1">
-									<h2>March 31st</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-3">
-									<h2>April 1st</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-1">
-									<h2>April 2nd</h2>
+									<h2>Schedule</h2>
 									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>April 3rd</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-2">
-									<h2>April 4th</h2>
+									<h2>Programming Workshops</h2>
 									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
@@ -76,11 +47,25 @@
 
 						<!-- Items -->
 							<div class="items">
+								<article class="item thumb span-1">
+									<h2>Alumni Panels</h2>
+									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+								</article>
 
-								<article class="item thumb span-3"><h2>April 5th</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>April 6th</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>April 7th</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>April 8th</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
+								<article class="item thumb span-3">
+									<h2>Keynote Speakers</h2>
+									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+								</article>
+
+								<article class="item thumb span-2">
+									<h2>Setup Instructions</h2>
+									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+								</article>
+
+								<article class="item thumb span-1">
+									<h2>Recorded Sessions and Materials</h2>
+									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+								</article>
 							</div>
 
 					</section>
