--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CS Clubs @ Colgate</title>
+		<title>Colgate Technology Immersion Week 2022</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,12 +30,12 @@
 
 								<article class="item thumb span-1">
 									<h2>RSVP</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="https://docs.google.com/forms/d/e/1FAIpQLSfIfD6NPbpm4HjzONEy0O9zVnazW0_CgSMuSqqszg8lZzBV1A/viewform?usp=sf_link"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>Schedule</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="schedule.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
