--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 								<article class="item thumb span-2">
 									<h2>Programming Workshops</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="workshops.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 							</div>
@@ -49,7 +49,7 @@
 							<div class="items">
 								<article class="item thumb span-1">
 									<h2>Alumni Panels</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="alumnipanels.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-3">
