--- a/schedule.html
+++ b/schedule.html
@@ -18,8 +18,8 @@
                 <div class="workshop-title-time">
                     <h3>Web Development Fundamentals </h3>
                     <p class="time">6-7 PM</p>
-                    <button id="button-link" onclick="window.location.href='workshops.html';">
-                        <p class="event-type workshop">Workshop</p>
+                    <button class="event-type workshop" onclick="window.location.href='workshops.html';">
+                        Workshop
                     </button>
                 </div>
                 <p class="host">Hosted by Lily Davisson '22</p>
