--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 
 								<article class="item thumb span-3">
 									<h2>Keynote Speakers</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="keynote.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>Setup Instructions</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="setup.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>Recorded Sessions and Materials</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="materials.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 							</div>
 
