--- a/schedule.html
+++ b/schedule.html
@@ -18,7 +18,7 @@
                 <div class="workshop-title-time">
                     <h3>Web Development Fundamentals </h3>
                     <p class="time">6-7 PM</p>
-                    <button id="button-link" onclick="window.location.href='workshops.html';">
+                    <button class="button-link" onclick="window.location.href='workshops.html';">
                         <p class="event-type workshop">Workshop</p>
                     </button>
                 </div>
