Make styling changes

--- a/workshops.html
+++ b/workshops.html
@@ -1,22 +1,26 @@
 <!DOCTYPE HTML>
-<html>
+<html class="popup">
 	<head>
 		<title>Colgate Technology Immersion Week 2022 - Programming Workshops</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/custom.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com"> 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link rel="stylesheet" href="assets/css/custom.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Karla&family=Secular+One&display=swap" rel="stylesheet">
 	</head>
 	<body class="iframe">
-        <h1>PROGRAMMING WORKSHOPS</h1>
+        <header class="popup-header">
+            <h1>PROGRAMMING WORKSHOPS</h1>
+        </header>
 
         <p>Each workshop is hosted by a fellow Colgate student and is a hands-on programming session designed to introduce you to a new programming language or framework. There are three levels of proficiency:
         </p>
         <ol>
             <li>
-                <h3>BEGINNER: no coding experience required (open to ALL majors)</h3>
+                <div class="subtitle">
+                    <h3>BEGINNER: no coding experience required (open to ALL majors)</h3>
+                </div>
             </li>
             <li>
                 <h3>INTERMEDIATE: some coding experience required (CS 101/102)</h3>
@@ -30,7 +34,6 @@
         <div class="workshop-line">
             <h2 class="proficiency beginner">BEGINNER</h2>
         </div>
-        <hr>
         <ul>
             <li>
                 <div class="workshop-title-time">
@@ -140,7 +143,6 @@
             <h2 class="proficiency intermediate">INTERMEDIATE</h2>
         </div>
 
-        <hr>
         <ul>
             <li>
                 <div class="workshop-title-time">
@@ -198,7 +200,6 @@
             <h2 class="proficiency advanced">ADVANCED</h2>
         </div>
 
-        <hr>
         <ul>
             <li>
                 <div class="workshop-title-time">
@@ -223,7 +224,6 @@
         </ul>
 
         <h2>Workshop Series</h2>
-        <hr>
         <div class="workshop-line">
             <p class="event-type series1">Building a personal website with GitHub Pages</p>
         </div>
