--- a/alumnipanels.html
+++ b/alumnipanels.html
@@ -10,14 +10,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Karla&family=Secular+One&display=swap" rel="stylesheet">
 	</head>
 	<body class="iframe">
-        <h1>ALumni Panels</h1>
-        <hr>
+        <header class="popup-header">
+            <h1>Alumni Panels</h1>
+        </header>
         <ul>
             <li>
                 <div class="workshop-title-time">
                     <h3>Software Engineering Best Practices </h3>
                     <p class="time">Tuesday, March 29th, 8-9 PM</p>
                 </div>
+                <p>Interested in a career in software engineering? About to start a software engineering job/internship and are unsure what to expect? Come and meet Colgate alumni who are now working in this field and ask any questions you might have in this Q&A-style panel!</p>
                 <p class="host">Hosted by alumni:</p>
                 <ul>
                     <li>
@@ -39,6 +41,7 @@
                     <h3>Non-Technical Roles in Tech</h3>
                     <p class="time">Thursday, March 31st, 8-9 PM</p>
                 </div>
+                <p>What else is out there for non-engineers in the field of technology? Come and meet Colgate alumni working in diverse, non-technical roles at some of the largest tech companies! </p>
                 <p class="host">Hosted by alumni Jess Bauer '09, Srikar Gullapalli '13, Olivia Castro '19, Gabriela Berroa '15</p>
             
             </li>
