--- a/keynote.html
+++ b/keynote.html
@@ -10,8 +10,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Karla&family=Secular+One&display=swap" rel="stylesheet">
 	</head>
 	<body class="iframe">
-        <h1>Keynote Speakers</h1>
-        <hr>
+        <header class="popup-header">
+            <h1>Keynote speakers</h1>
+        </header>
         <ul>
             <li>
                 <div class="workshop-title-time">
@@ -19,6 +20,18 @@
                     <p class="time">Tuesday, March 29th, 11:20 AM - 12:20 PM</p>
                 </div>
                 <p class="host">Hosted by Dr. Joanmarie Del Vecchio, Postdoctoral Fellow, Neukom Institute for Computational Science, Dartmouth College, Hanover, NH</p>
+                <div class="keynote-photo-bio">
+                    <img class="guest-image" src="images/keynotes/joanmarie_del_vecchio.jpeg">
+                    <span>
+                        <h3>ABSTRACT: </h3>
+                        <p>We are in a new era for geospatial data science with the creation of better computers, better algorithms and better data. Geoscientists, previously limited to low-resolution and infrequent data collection, can now investigate Earth's surface at unprecedented resolution in time and space. Not only can we revisit familiar landscapes with new investigative tools, but areas of Earth's surface like the Arctic are newly available for study, allowing us to formulate hypotheses previously only testable in well-studied landscapes. And these breakthroughs are happening not a moment too soon, as high-latitude landscape change and carbon release remains a potent "known unknown" in global carbon budgets. </p>  
+                    </span>
+                    <span>
+                        <h3>BIO: </h3>
+                        <p>I am a Neukom Postdoctoral Fellow and a geomorphologist who uses computational tools to transform field observations and remotely sensed data to study landscape response to changing climate. I integrate topographic, climate and vegetation data from high latitudes to find signatures of permafrost processes and thaw on the landscape and consequences for sediment and carbon release. In my doctoral work, I explored how permafrost thaw in ancient Appalachia and Alaska controlled landscape form and erosion rates. I look forward to connecting records of past permafrost processes to understanding ongoing landscape change and vice versa. I also look forward to developing curricula that promote interdisciplinary and inclusive investigations of Earth's surface. At home I brew kombucha and sew things, though fermentation seems more forgiving of imprecise measurements than collared shirts. Pronouns she/her. </p>
+                        <p>Contact: <a class="contact-link" href="mailto: Joanmarie.Del.Vecchio@Dartmouth.edu">Joanmarie.Del.Vecchio@Dartmouth.edu</a></p>
+                    </span>
+                </div>
             </li>
             <li>
                 <div class="workshop-title-time">
@@ -28,7 +41,23 @@
                     <p class="time">Saturday, April 2nd, 12-1 PM</p>
                 </div>
                 <p class="host">Hosted by Dr. Leon Reznik, Professor of Computer Science at Rochester Institute of Technology, New York, USA</p>
-                
+                <div class="keynote-photo-bio">
+                    <img class="guest-image" src="images/keynotes/leon_reznik.jpeg">
+                    <span>
+                        <h3>ABSTRACT: </h3>
+                        <p>In this talk, we will discuss the areas in computer and information sciences, which currently seem to offer the best opportunities for the professional development and employment, such as cybersecurity, AI and ML, Big data, and our work therein. We will start with analyzing the US Bureau of Labor statistics to find out the computing fields forecasted to experience the most significant growth, and their contents. We will review those discipline definitions and their relationship. While we will have a short discussion of each field origins and history, we will try to emphasize a possible future progress.
+                            In the second part, we will briefly describe our research, intersecting domains of cybersecurity, AI, and Data and Information Science, and our products in the area of intelligent security systems. For today's presentation, we selected two major projects that show our activities in research and education. We will present a proof-of-the-concept design of the data quality and security evaluation framework that includes the line of the Android smartphone apps aiming at security and data quality evaluation, which we want to attract your attention to and seek your collaboration in further development. 
+                            Also, we will present my new textbook “Intelligent security systems: How artificial intelligence, machine learning and data science work for and against computer security” that was published this year by IEEE Press - Wiley&Sons. The book along with other curriculum materials are designated to facilitate the preparation and delivery of the college level course in computer science, security, IT and information systems. Its six major chapters include a review of the modern state of the cybersecurity and the current AI and ML problems and approaches, firewalls, intrusion detection systems, anti-malware methods and tools, hacking activity and attack recognition and prevention, user's authentication, and adversarial machine learning attacks and protection against them.  This book merges together various knowledge areas as diverse as AI and ML techniques and computer security systems and applications. It will allow to instill into students a distinctive knowledge in these very intense domains.
+                            </p>  
+                    </span>
+                    <span>
+                        <h3>BIO: </h3>
+                        <p>Leon Reznik is a Professor of Computer Science and the founding member of the ESL Global Cybersecurity Institute at the Rochester Institute of Technology, New York, USA.  Prof. Reznik is an author of the textbook “Fuzzy Controllers” (Elsevier-Butterworth-Heinemann, Oxford, 1997) and an editor of “Fuzzy System Design: Social and Engineering Applications” (Physica Verlag, 1998), “Soft Computing in Measurement and Information Acquisition” (Springer, 2003), “Advancing Computing and Information Sciences” (Cary Graphic Arts Press, 2005). His new textbook “Intelligent security systems: How artificial intelligence, machine learning and data science work for and against computer security” was just released by IEEE Press - Wiley&Sons. He teaches classes in the areas of ML & AI and cybersecurity.
+                            Dr. Reznik's research concentrates on study and development of intelligent data analytics, sensor networks and systems as well as cybersecurity. His current research interests include neural networks and machine learning; data quality and security evaluation and assurance; intelligent intrusion detection in cyber-physical systems; cognitive sensor networks and systems. Dr. Reznik serves as an Associate Editor of the ACM Journal of Data and Information Quality.
+                        </p>
+                        <p>Please, see his website at <a class="contact-link" href="https://cs.rit.edu/~lr/">https://cs.rit.edu/~lr/</a> for more information.</p>
+                        </span>
+                </div>
             </li>
             
         </ul>
