--- a/materials.html
+++ b/materials.html
@@ -10,17 +10,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Karla&family=Secular+One&display=swap" rel="stylesheet">
 	</head>
 	<body class="iframe">
-        <h1>Recorded Sessions & Materials</h1>
-        <hr>
+        <header class="popup-header">
+            <h1>Recorded Sessions & Materials</h1>
+        </header>
 
         <p>Here you will find recordings and materials for each session you might have missed!</p>
-
-        <ul>
-            <li>
-                <p>COMING SOON</p>
-            </li>
-            
-        </ul>
+        <p>COMING SOON</p>
 
         
         <script src="assets/js/jquery.min.js"></script>
