--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1>Colgate Technology Immersion Week</h1>
-									<p>March 28th - April 7th 2022</p>
+									<img src="images/logo.png" alt="">
 								</div>
 
 								<article class="item thumb span-1">
 									<h2>RSVP</h2>
-									<a href="https://docs.google.com/forms/d/e/1FAIpQLSfIfD6NPbpm4HjzONEy0O9zVnazW0_CgSMuSqqszg8lZzBV1A/viewform?usp=sf_link"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="https://docs.google.com/forms/d/e/1FAIpQLSfIfD6NPbpm4HjzONEy0O9zVnazW0_CgSMuSqqszg8lZzBV1A/viewform?usp=sf_link"><img src="images/thumbs/RSVP.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>Schedule</h2>
-									<a href="schedule.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="schedule.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/schedule.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
