--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 								<article class="item thumb span-2">
 									<h2>Programming Workshops</h2>
-									<a href="workshops.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="workshops.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
 								</article>
 
 							</div>
@@ -51,22 +51,22 @@
 							<div class="items">
 								<article class="item thumb span-1">
 									<h2>Alumni Panels</h2>
-									<a href="alumnipanels.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="alumnipanels.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-3">
 									<h2>Keynote Speakers</h2>
-									<a href="keynote.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="keynote.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>Setup Instructions</h2>
-									<a href="setup.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="setup.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>Recorded Sessions and Materials</h2>
-									<a href="materials.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="materials.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
 								</article>
 							</div>
 
