--- a/workshops.html
+++ b/workshops.html
@@ -78,6 +78,7 @@
                     <p class="time">Friday, April 1st, 6-7 PM</p>
                 </div>
                 <p class="host">Hosted by Alex Ng '22</p>
+                <p>Networking has become almost necessary to get a foot in the door to high-demand roles in industries like tech, finance, and consulting. Learn best practices regarding networking to land your dream job!</p>
                 
             </li>
             <li>
@@ -86,6 +87,7 @@
                     <p class="time">Saturday, April 2nd, 6-7 PM</p>
                 </div>
                 <p class="host">Hosted by Alex Ng '22</p>
+                <p>Blockchain is an emerging technology that has seen rapid growth and demand in recent years. This workshop will cover the technicals of what the blockchain is and offer a discussion on its potential.</p>
                 
             </li>
             <li>
