--- a/workshops.html
+++ b/workshops.html
@@ -104,6 +104,7 @@
                     <p class="time">Monday, April 4th, 6-7 PM</p>
                 </div>
                 <p class="host">Hosted by Josiah Paintsil '23</p>
+                <p>The GitHub 101 workshop will be an interactive workshop where we go over all the basics of GitHub. We will go over how to use GitHub for personal use, collaborative use, review some helpful commands, and practice some useful yet advanced techniques. </p>
             
             </li>
             <li>
@@ -137,6 +138,7 @@
                     <p class="time">Thursday, April 7th, 7-8 PM</p>
                 </div>
                 <p class="host">Hosted by Josiah Paintsil '23</p>
+                <p>The No-Code tools workshop is an interactive workshop where we will learn how to use popular No-Code tools to create an app, handle a database, establish automation, and deploy that app. </p>
             
             </li>
         </ul>
