--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 								<article class="item thumb span-2">
 									<h2>Programming Workshops</h2>
-									<a href="workshops.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
+									<a href="workshops.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/workshops.png" alt=""></a>
 								</article>
 
 							</div>
