--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 								<article class="item thumb span-3">
 									<h2>Keynote Speakers</h2>
-									<a href="keynote.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
+									<a href="keynote.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/keynote.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
