--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="items">
 								<article class="item thumb span-1">
 									<h2>Alumni Panels</h2>
-									<a href="alumnipanels.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
+									<a href="alumnipanels.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/alumni.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-3">
@@ -61,12 +61,12 @@
 
 								<article class="item thumb span-2">
 									<h2>Setup Instructions</h2>
-									<a href="setup.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
+									<a href="setup.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/setup.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>Recorded Sessions and Materials</h2>
-									<a href="materials.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/black.png" alt=""></a>
+									<a href="materials.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/materials.png" alt=""></a>
 								</article>
 							</div>
 
