--- a/schedule.html
+++ b/schedule.html
@@ -94,7 +94,7 @@
                         Workshop
                     </button>
                 </div>
-                <p class="host">Hosted by Ahmed Kamren '23</p>
+                <p class="host">Hosted by Ahmed Kamran '23</p>
             
             </li>
             <li>
@@ -121,7 +121,7 @@
                         Workshop
                     </button>
                 </div>
-                <p class="host">Hosted by Ahmed Kamren '23</p>
+                <p class="host">Hosted by Ahmed Kamran '23</p>
                 
             </li>
             <li>
