--- a/setup.html
+++ b/setup.html
@@ -16,9 +16,58 @@
 
         <p>Please follow the setup instructions BEFORE you attend each workshop!</p>
 
-        <p>COMING SOON</p>
+        <ul>
+            <li>
+                <div class="workshop-title-time">
+                    <h3>Java Basics</h3>
+                    <p class="time">Tuesday, April 5th, 7-8 PM</p>
+                </div>
+                <p class="host">Hosted by Maeve Farley '24</p>
+                <p class="setup"><a class="contact-link" href="https://codingbat.com/java">https://codingbat.com/java</a></p>
+                <ul class="setup">
+                    <li>
+                        <p>Click create new account in top right hand corner (unless you already have an account)</p>
+                    </li> 
+                    <li>
+                        <p>Use preferred email and create a password</p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <div class="workshop-title-time">
+                    <h3>Personal Website Deployment using GitHub Pages</h3>
+                    <p class="time">6-7 PM</p>
+                </div>
+                <p class="host">Hosted by Ahmed Kamran '23</p>
+                <ul class="setup">
+                    <li>
+                        <p>Create a GitHub account: <a class="contact-link" href="https://github.com/">https://github.com/</a></p>
+                    </li> 
+                    <li>
+                        <p>Install Git: <a class="contact-link" href="https://git-scm.com/">https://git-scm.com/</a></p>
+                    </li>
+                    <li>
+                        <p>Install VS Code: <a class="contact-link" href="https://code.visualstudio.com">https://code.visualstudio.com</a></p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <div class="workshop-title-time">
+                    <h3>React Basics</h3>
+                    <p class="time">6-7 PM</p>
+                </div>
+                <p class="host">Hosted by Ahmed Kamran '23</p>
+                <ul class="setup">
+                    <li>
+                        <p>Install Node JS: <a class="contact-link" href="https://nodejs.org/en/download/">https://nodejs.org/en/download/</a></p>
+                    </li> 
+                    <li>
+                        <p>Install VS Code: <a class="contact-link" href="https://code.visualstudio.com">https://code.visualstudio.com</a></p>
+                    </li>
+                </ul>
+            </li>
+        </ul>
 
-        
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/jquery.poptrox.min.js"></script>
         <script src="assets/js/browser.min.js"></script>
