--- a/alumnipanels.html
+++ b/alumnipanels.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="assets/css/custom.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+                <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Karla&family=Secular+One&display=swap" rel="stylesheet">
 	</head>
 	<body class="iframe">
