--- a/workshops.html
+++ b/workshops.html
@@ -53,14 +53,20 @@
                 <div class="instructions">
                     <ol>
                         <li>
-                            Install <a href="">Visual Studio Code</a>
+                            <p>
+                                Install <a href="">Visual Studio Code</a>
+                            </p>
                         </li>
                         <li>
-                            Install the Live Server extension for Visual Studio Code by navigating to the extensions tab on the left vertical 
-                            menu (looks like building blocks) and searching for <a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer">Live Server by Ritwick Dey</a>.
+                            <p>
+                                Install the Live Server extension for Visual Studio Code by navigating to the extensions tab on the left vertical 
+                                menu (looks like building blocks) and searching for <a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer">Live Server by Ritwick Dey</a>.
+                            </p>
                         </li>
                         <li>
-                            Install <a href="https://www.mozilla.org/en-US/firefox/windows/">Mozilla Firefox</a>
+                            <p>
+                                Install <a href="https://www.mozilla.org/en-US/firefox/windows/">Mozilla Firefox</a>
+                            </p>
                         </li>
                     </ol>
                 </div>
@@ -261,7 +267,11 @@
                 <p>Learn the fundamentals of React, a front-end framework for building web applications with JavaScript, by building the front-end for a to-do list app.</p>     
                 <h4>Requires:</h4>
                 <ul>
-                    <li>Experience with Javascript OR attendance of Javascript basics workshop</li>
+                    <li>
+                        <p>
+                            Experience with Javascript OR attendance of Javascript basics workshop
+                        </p>
+                    </li>
                 </ul>
                 <button class="neutral collapse centered inactive">
                     Setup instructions coming soon
