--- a/workshops.html
+++ b/workshops.html
@@ -127,7 +127,7 @@
             <li>
                 <div id="blockchain-details" class="workshop-title-time">
                     <h3>Blockchain Basics</h3>
-                    <p class="time">Saturday, April 2nd, 6-7 PM</p>
+                    <p class="time">Sunday, April 3rd, 5-6 PM</p>
                 </div>
                 <p class="host">Hosted by Alex Ng '22</p>
                 <p>Blockchain is an emerging technology that has seen rapid growth and demand in recent years. This workshop will cover the technicals of what the blockchain is and offer a discussion on its potential.</p>
@@ -192,7 +192,7 @@
                     <h3>R Basics</h3>
                     <p class="time">Thursday, April 7th, 6-7 PM</p>
                 </div>
-                <p class="host">Hosted by Fairuz Ishraque '22</p>
+                <p class="host">Hosted by Taz Syed '22</p>
                 <button class="neutral collapse centered inactive">
                     Setup instructions coming soon
                 </button>
